# allcodespaces

./: .gitignore  AGENTS.md  CLAUDE.md  Chat.php  MONITORING.md  Makefile  QUICK_TEST.md  README.md  REPORT.md  TESTING.md  TESTING_BOT_PLACEMENT.md  TZ.md  clearJson.py  dataaquisitionnoxon  dataaquisitionnoxon.pub  exportLinks.php  header.php  insertCategories.php  openai_admin.js  package-lock.json  package.json  processed_projects.json  processed_videos_log.csv  screenshot_campaign_format.js  sensoica_shortcode.php  server.ts  showTasks.php
bot/: README.md  bot_handlers.py  helpers.py  main.py  parsers.py  poetry.toml  pyproject.toml  services.py  settings.py  utils.py  webhooks_utils.py
bot/docker/: Dockerfile
bot/tests/: conftest.py  nono_parsers.py  nono_services.py  test_parsers.py  test_preview.py  test_services.py
bot/tests/py_data/: __init__.py  campaign_channel.py  channels_data.py
web_app/: .gitignore  docker-compose.stag.yml  docker-compose.yml  docker-up-README.md  docker-up.sh  grafana_datasource.yml  grafana_loki.yml  gunicorn-cfg.py  manage.py  prometheus.yml  promtail_config.yml  pyproject.toml  pytest.ini
web_app/core/: admin.py  admin_forms.py  admin_utils.py  apps.py  authentication.py  base_models.py  db_proxies.py  exporter.py  external_clients.py  filterset_classes.py  ledger_service.py  metrics.py  middlewares.py  models.py  models_qs.py  models_validators.py  override_django_locale.py  serializers.py  services.py  signals.py  tasks.py  throttlers.py  urls.py  utils.py  views.py  webhook_client.py
web_app/core/fixtures/: legalentities.json
web_app/core/media_plan/: __init__.py  generator.py  template.py
web_app/core/migrations/: 0001_initial.py  0002_alter_campaignchannel_impressions_fact_and_more.py  0003_user_tg_id_user_tg_photo_url_user_tg_username.py  0004_alter_user_tg_id.py  0005_alter_message_image.py  0006_remove_channel_owner_remove_message_footer_and_more.py  0007_remove_campaign_last_update_and_more.py  0008_alter_campaign_status.py  0009_message_name_message_title.py  0010_campaign_channel_post_id_and_more.py  0011_remove_campaign_channel_post_id_and_more.py  0012_remove_campaignchannel_channel_post_id_and_more.py  0013_message_button.py  0014_alter_messagelink_options_and_more.py  0015_remove_messagelink_position_remove_messagelink_type.py  0016_campaignchannel_is_message_published.py  0017_remove_message_channel_post_id_and_more.py  0018_channel_avatar.py  0019_alter_channel_avatar.py  0020_alter_channel_avatar.py  0021_rename_avatar_channel_avatar_url.py  0022_message_video.py  0023_channel_username.py  0024_channel_invitation_link.py  0025_channel_geo_channel_members_count_channel_subject_and_more.py  0026_campaignchannel_publish_status_and_more.py  0027_alter_campaign_options_alter_campaignchannel_options_and_more.py  0035_channeladmin.py  (+117 more)
web_app/dockerb/: Dockerfile
web_app/nginx/: .env_file  localhost.conf  noxonstage.conf  stag.conf
web_app/templates/: 404.html  500.html
web_app/web_app/: app_settings.py  asgi.py  celery.py  context_processors.py  logger.py  settings.py  urls.py  wsgi.py
(+474 files in other folders)
