[project]
name = "web-app"
version = "0.1.0"
description = "TeleWinBackend"
authors = [{name ="Ahmed Mohamed"}]
readme = "README.md"
requires-python =">=3.13,<4.0"
dependencies = [
    "django>=5.2",
    "django-jazzmin>=3.0.1",
    "djangorestframework>=3.16.0",
    "requests>=2.32.3",
    "gunicorn>=23.0.0",
    "pydantic-settings>=2.8.1",
    "drf-yasg>=1.21.10",
    "django-cors-headers>=4.7.0",
    "pillow>=11.2.1",
    "celery (>=5.5.2,<6.0.0)",
    "django-celery-beat (>=2.8.0,<3.0.0)",
    "redis (>=6.0.0,<7.0.0)",
    "django-redis (>=5.4.0,<6.0.0)",
    "django-celery-results (>=2.6.0,<3.0.0)",
    "whitenoise (>=6.9.0,<7.0.0)",
    "django-filter (>=25.1,<26.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "PyJWT>=2.8.0",
#    "django-axes (>=8.0.0,<9.0.0)",
    "django-prometheus (>=2.4.1,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "django-admin-rangefilter (>=0.13.3,<0.14.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "pytest>=8.4.2",
    "ruff>=0.13.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = 'web_app.settings'
markers = ['django_db']
python_files = 'test_*.py'


